openpracticelibrary/media-service/overlays/development/patchRoute.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: opl-media-service
spec:
  host: 'opl-media-service-opl-dev.apps.s44.core.rht-labs.com'
